Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-41896

QtWebKit JavaScript crashes on big-endian architectures (Regression from Qt4)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.4.0 RC
    • 5.0.0, 5.3.2, 5.4.0 Alpha
    • WebKit
    • None
    • 0c58a486f551e7e7b63d438e3d32f21f876327d1 0b6f959022700ecf9374bdbb13772242d3f7e617

      The cloop fall-back which javascriptcore uses in recent webkit versions has a number of flaws that makes it fail to work on big-endian machines, and being the fallback for when no JIT is available means no javascript works on big-endian architectures.

      This a regression from Qt 4.8 where the old JavaScriptCore had the traditional interpreter fallback and not cloop.

        For Gerrit Dashboard: QTBUG-41896
        # Subject Branch Project Status CR V

            allan.jensen Allan Sandfeld Jensen
            allan.jensen Allan Sandfeld Jensen
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes