Do not use JIT on big endian architectures

All the JIT implementations targets the little-endian versions of ARM,
MIPS and SH4 respectively. So in case anyone builds on those platforms
we should not enable JIT.

Task-number: QTBUG-41896
Change-Id: I5be167511e2c3eac6c63e603b82da84fb6b29eaa
Reviewed-by: Julien Brianceau <jbriance@cisco.com>
Reviewed-by: Michael Bruning <michael.bruning@digia.com>